src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_ref_pattern_vs_bitand.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 16,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Ref {
                                                    mutable: false,
                                                    inner: Pattern {
                                                        kind: Ident {
                                                            by_ref: false,
                                                            mutable: false,
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 20,
                                                                    end: 21,
                                                                    start_line: 1,
                                                                    start_col: 21,
                                                                },
                                                            },
                                                            subpattern: None,
                                                        },
                                                        span: Span {
                                                            start: 20,
                                                            end: 21,
                                                            start_line: 1,
                                                            start_col: 21,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 19,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 25,
                                                                        end: 26,
                                                                        start_line: 1,
                                                                        start_col: 26,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 25,
                                                            end: 26,
                                                            start_line: 1,
                                                            start_col: 26,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 25,
                                                    end: 26,
                                                    start_line: 1,
                                                    start_col: 26,
                                                },
                                            },
                                            span: Span {
                                                start: 19,
                                                end: 26,
                                                start_line: 1,
                                                start_col: 20,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 28,
                                                    end: 29,
                                                    start_line: 1,
                                                    start_col: 29,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Binary {
                                                    op: BitAnd,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 33,
                                                                                end: 34,
                                                                                start_line: 1,
                                                                                start_col: 34,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 33,
                                                                    end: 34,
                                                                    start_line: 1,
                                                                    start_col: 34,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 33,
                                                            end: 34,
                                                            start_line: 1,
                                                            start_col: 34,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 255,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 37,
                                                                    end: 41,
                                                                    start_line: 1,
                                                                    start_col: 38,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 37,
                                                            end: 41,
                                                            start_line: 1,
                                                            start_col: 38,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 33,
                                                    end: 41,
                                                    start_line: 1,
                                                    start_col: 34,
                                                },
                                            },
                                            span: Span {
                                                start: 28,
                                                end: 41,
                                                start_line: 1,
                                                start_col: 29,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 43,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 45,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 45,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 45,
        start_line: 1,
        start_col: 1,
    },
}
